--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <button>Learn More</button>
         <button>Subscribe</button>
       </div>
-    </div>
-    <audio controls autoplay>
-      <source src="./assets/elephant.mp3" type="audio/ogg" />
+      <audio controls autoplay>
+        <source src="./assets/elephant.mp3" type="audio/mp3" />
 
-      Your browser does not support the audio element.
-    </audio>
+        Your browser does not support the audio element.
+      </audio>
+    </div>
   </body>
 </html>
